Homepage with intro and featured projects, projects page, and ventilator page

--- a/src/components/PageLayout/Header/header.module.less
+++ b/src/components/PageLayout/Header/header.module.less
@@ -78,7 +78,7 @@
 .nav{
     .flex-center();
     background-color: #fff;
-    border-radius: 0 3rem 0 0;
+    border-radius: 0 1rem 0 0;
     color: #5F6F81;
     font-weight: 500;
     height: 4.35rem;
@@ -108,7 +108,7 @@
         }
         .anchorActive{
             background-color: @primary-color;
-            border-radius: 14px;
+            border-radius: 0.5rem;
             color: #fff;
         }
     }
