--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -5,6 +5,10 @@
 @secondary-color: #4ECDC4;
 @tertiary-color: #292F36;
 
+@primary-dark: #e84f4f;
+@secondary-dark: #44b1a9;
+
+
 body{
   font-size: 15px;
 }
