--- a/src/components/PageLayout/Sidebar/sidebar.module.less
+++ b/src/components/PageLayout/Sidebar/sidebar.module.less
@@ -8,43 +8,49 @@
 .sidebarContent{
     // background: #F5F8F9;
     border-radius: @border-radius-full;
+    padding-bottom: 2rem;
     margin: 0px;
     aside{
         padding: @padding-margin-val;
     
         .profileAvatar{
+            height: 185px;
+            width: 185px;
+            margin: 0 auto;
             background-image: url('../../../images/profile.png');
-            height: 219px;
             background-size: cover;
             background-repeat: no-repeat;
+            background-position: 30% 30%;
             border-radius:  @border-radius-full;
             @media screen and (max-width:767px){
                 max-width: 230px;
                 margin: auto;
-                
             }
         }
         .name{
             margin-top:1.4rem;
             h2{
                 font-weight: 200;
-                letter-spacing: 2px;
+                letter-spacing: 1px;
+                font-weight: bold;
             }
             span{
                 font-weight: 600;
                 letter-spacing: 0px;
             }
             .badge {
-                margin-top: 0.5rem;
+                margin-top: 0.25rem;
                 font-size: .837rem;
                 font-weight: 400;
-                border-radius: 10rem;
+                border-radius: 0.5rem;
                 padding: .6rem 1rem;
                 text-align: center;
             }
             .badgeGray {
                 background-color: #E9EDF0;
                 color: #44566C;
+                font-size: 1rem;
+                font-weight: bold;
             }
             .boxName{
                 width: 100%;
@@ -84,7 +90,7 @@
                     padding: .9rem 1rem;
                     text-transform: uppercase;
                     background-color: @primary-color;
-                    border-radius: 28px;
+                    border-radius: 0.5rem;
                     color: #fff;
                 }
             }
@@ -95,7 +101,17 @@
         &:hover{
             color: rgba(0, 0, 0, 0.65);
         }
+        text-align: left;
+        .linkedin {
+            margin-left: 12px;
+            font-size: 0.837rem;
+            font-weight: 400 !important;
+            text-align: left;
+            width: min-content;
+            margin-bottom: 0;
+        }
         .emailHider{
+            margin-left: 12px;
             font-size: 0.837rem;
             font-weight: 400 !important;
             &::before{
@@ -105,6 +121,9 @@
                 content:'gmail.com'
             }
         }
+    }
+    a.linkedinLink {
+        text-align: left;
     }
 }
 
