Add responsive styles to ProjectTile and ventilator project page

--- a/src/components/PageFragments/HomePage/FeaturedProjects.module.less
+++ b/src/components/PageFragments/HomePage/FeaturedProjects.module.less
@@ -4,15 +4,15 @@
   margin-top: 1rem;
 }
 .button {
-  background-color: @secondary-color;
-  border-color: @secondary-color;
+  background-color: @primary-color;
+  border-color: @primary-color;
   span {
     z-index: 2;
   }
   
   &:hover {
-    background-color: @secondary-color;
-    border-color: @secondary-color;
+    background-color: @primary-color;
+    border-color: @primary-color;
     box-shadow: 
       0 1px 5px 1px rgba(0, 0, 0, 0.16), 
       0 3px 3px 1px rgba(0, 0, 0, 0.12), 
