--- a/src/components/PageLayout/Sidebar/sidebar.module.less
+++ b/src/components/PageLayout/Sidebar/sidebar.module.less
@@ -89,9 +89,18 @@
                 a{
                     padding: .9rem 1rem;
                     text-transform: uppercase;
-                    background-color: @primary-color;
+                    background-color: @secondary-color;
                     border-radius: 0.5rem;
                     color: #fff;
+                    transition: box-shadow 0.25s ease-in-out;
+                }
+                &:hover {
+                    a {
+                        box-shadow: 
+                            0 1px 5px 1px rgba(0, 0, 0, 0.16), 
+                            0 3px 3px 1px rgba(0, 0, 0, 0.12), 
+                            0 5px 9px 7px rgba(0, 0, 0, 0.09);
+                    }
                 }
             }
         }
