--- a/src/components/ProjectTile/projecttile.module.less
+++ b/src/components/ProjectTile/projecttile.module.less
@@ -10,3 +10,27 @@
   margin: auto;
   margin-top: 30px;
 }
+.tileCard {
+  > div {
+    @media (max-width: 768px) {
+      > div {
+        height: 200px !important;
+      }
+    }
+    img {
+      position: absolute;
+      @media (max-width: 768px) {
+        top: 0 !important;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    margin-bottom: 1rem;
+    width: 100%;
+    max-height: 360px;
+  }
+}
+
+.coverImage {
+  
+}
