--- a/src/components/Projects/VentilatorPage/ventilatorpage.module.less
+++ b/src/components/Projects/VentilatorPage/ventilatorpage.module.less
@@ -6,6 +6,10 @@
       margin-bottom: 0.5rem;
       font-weight: bold;
       font-size: 2.25rem;
+
+      @media (max-width: 768px) {
+        margin-top: 2rem;
+      }
     }
     p {
       text-align: center;
