Replaced resume file and added Prowler Chasis Design project page

--- a/src/components/PageFragments/HomePage/FeaturedProjects.module.less
+++ b/src/components/PageFragments/HomePage/FeaturedProjects.module.less
@@ -19,3 +19,12 @@
       0 5px 9px 7px rgba(0, 0, 0, 0.09);
   }
 }
+
+.colPadding {
+  @media (max-width: 768px) {
+    width: 100%;
+  }
+  @media (min-width: 768px) and (max-width: 980px) {
+    padding-bottom: 1rem;
+  }
+}
