--- a/src/components/Projects/VentilatorPage/ventilatorpage.module.less
+++ b/src/components/Projects/VentilatorPage/ventilatorpage.module.less
@@ -1,6 +1,9 @@
+@import (reference) '../../../styles/index.less';
 .pageContainer {
   width: 100%;
   .pageHeader {
+    display: flex;
+    flex-direction: column;
     h1 {
       text-align: center;
       margin-bottom: 0.5rem;
@@ -14,6 +17,21 @@
     p {
       text-align: center;
       font-weight: 300;
+    }
+    a {
+      color: #fafafa;
+      background-color: @primary-color;
+      padding: 1rem;
+      margin: 1rem auto;
+      text-align: center;
+      border-radius: 0.5rem;
+      transition: box-shadow 0.25s ease-in-out;
+      &:hover {
+        box-shadow: 
+            0 1px 5px 1px rgba(0, 0, 0, 0.16), 
+            0 3px 3px 1px rgba(0, 0, 0, 0.12), 
+            0 5px 9px 7px rgba(0, 0, 0, 0.09);
+      }
     }
   }
 }
