Added CollegiateProjects, Pisp, and Dron Design pages

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -8,7 +8,12 @@
 @primary-dark: #e84f4f;
 @secondary-dark: #44b1a9;
 
-
+#___gatsby {
+  height: 100%;
+}
+#gatsby-focus-wrapper {
+  height: 100%;
+}
 body{
   font-size: 15px;
 }
